@@ -64,6 +64,7 @@ out_arc_full(std::basic_ostream<A,B>& os) { os.iword(arcformat_index) = FULL; re
   int abort();			// called on a bad read
   int readLegible(istream &);	// returns 0 on failure (bad input)
   void writeLegible(ostream &);
+  void writeGraphViz(ostream &); // see http://www.research.att.com/sw/tools/graphviz/
   int numStates() const { return states.count(); }
   
   void setPathArc(PathArc *pArc,const Arc &a) {
